Mise à jour de l'application React