@@ -8,6 +8,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/categories")
@@ -16,24 +17,24 @@ public class CategoryController {
 
     private final CategoryService categoryService;
 
-    @PostMapping
-    public ResponseEntity<CategoryDTO> createCategory(@RequestBody CategoryDTO categoryDTO) {
-        Category category = categoryService.createCategory(categoryDTO);
-        return ResponseEntity.ok(CategoryDTO.fromCategory(category));
-    }
-
     @GetMapping
     public ResponseEntity<List<CategoryDTO>> getAllCategories() {
         List<Category> categories = categoryService.getAllCategories();
         List<CategoryDTO> categoryDTOs = categories.stream()
                 .map(CategoryDTO::fromCategory)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(categoryDTOs);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<CategoryDTO> getCategoryById(@PathVariable Long id) {
         Category category = categoryService.getCategoryById(id);
+        return ResponseEntity.ok(CategoryDTO.fromCategory(category));
+    }
+
+    @PostMapping
+    public ResponseEntity<CategoryDTO> createCategory(@RequestBody CategoryDTO categoryDTO) {
+        Category category = categoryService.createCategory(categoryDTO);
         return ResponseEntity.ok(CategoryDTO.fromCategory(category));
     }
 
